--- a/style.css
+++ b/style.css
@@ -6,3 +6,24 @@ html, body {
 section {
     margin-top: 10px;
 }
+
+.task-one::before {
+    content: "once upon";
+}
+
+.task-one::after {
+    content: "the end";
+}
+
+.task-two {
+    background-image: url(../assets/beach.jpg);
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    width: 50vw;
+    height: 50vh;
+}
+
+.task-three {
+    width: 50vw;
+    height: 50vh;
+    transform: rotate(180deg);
+}
